// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`can be overridden with more specific version 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "dependencies": [
    {
      "name": "depy",
      "type": "peer",
      "version": "^9",
    },
  ],
}
`;

exports[`deps.all returns all the dependencies 1`] = `
[
  {
    "name": "dep1",
    "type": "devenv",
  },
  {
    "name": "dep3",
    "type": "peer",
  },
  {
    "name": "dep2",
    "type": "runtime",
  },
]
`;

exports[`duplicates are ignored 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "dependencies": [
    {
      "name": "depy",
      "type": "peer",
    },
  ],
}
`;

exports[`minimal case 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "dependencies": [
    {
      "name": "my-first-dep",
      "type": "runtime",
    },
  ],
}
`;

exports[`with package alias 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "dependencies": [
    {
      "name": "bar",
      "type": "peer",
      "version": "npm:@bar/legacy",
    },
  ],
}
`;

exports[`with version requirement 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "dependencies": [
    {
      "name": "depy",
      "type": "peer",
      "version": "^7",
    },
  ],
}
`;
